fix: Fixed issue with image not showing:

--- a/client/src/screens/Home/components/PostList/components/Post/index.scss
+++ b/client/src/screens/Home/components/PostList/components/Post/index.scss
@@ -32,7 +32,7 @@
 
     .img {
       @extend %image-button;
-      background-image: url('./images/comment.svg');
+      background-image: url('./images/comment.png');
       width: 20px;
       height: 15px;
     }
